--- a/index.html
+++ b/index.html
@@ -57,12 +57,9 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>A Historia da New Holland?</h2>
+                    <p class="p-2">A A New Holland tem o legado dos pioneiros da terra, e cada um deles melhorou a produtividade dos agricultores desde 1895.        Ao longo da história, aprendemos que viver um legado é tão poderoso que nos inspira a um senso de propósito e pertencimento.
+                        Sempre mantivemos nossos valores e os de nossos fundadores. Os mesmos valores que nossos ancestrais prezavam foram transmitidos e continuarão nas próximas gerações, moldando nosso futuro.</p>
                 </div>
             </div>
         </section>
